--- a/ADVANCE-TXT-kanha.ipynb
+++ b/ADVANCE-TXT-kanha.ipynb
@@ -98,10 +98,10 @@
         "\n",
         "#@markdown ### <font color=ORANGE>Environment Variables\n",
         "\n",
-        "API_ID = \"\"  #@param {type:\"string\"}\n",
+        "API_ID = \"22215080\"  #@param {type:\"string\"}\n",
         "os.environ['API_ID'] = API_ID\n",
         "\n",
-        "API_HASH = \"\"  #@param {type:\"string\"}\n",
+        "API_HASH = \"6ab80ad5d78fee18fdd9b909edfbafd5\"  #@param {type:\"string\"}\n",
         "os.environ['API_HASH'] = API_HASH\n",
         "\n",
         "BOT_TOKEN = \"\"  #@param {type:\"string\"}\n",
