--- a/ADVANCE-TXT-kanha.ipynb
+++ b/ADVANCE-TXT-kanha.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Soninkuwal/ADVANCE-TXT-kanha/blob/main/ADVANCE-TXT-kanha.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kanha453/ADVANCE-TXT-kanha/blob/main/ADVANCE-TXT-kanha.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,7 @@
         "\n",
         "\n",
         "# GitHub repository URL\n",
-        "GITHUB_URL = \"https://github.com/Soninkuwal/ADVANCE-TXT-kanha.git\"  # Updated URL\n",
+        "GITHUB_URL = \"https://github.com/kanha453\ADVANCE-TXT-kanha.git\"  # Updated URL\n",
         "BRANCH_NAME = \"main\"  # Specify the branch name\n",
         "\n",
         "# Base directory for cloning\n",
