--- a/ADVANCE-TXT-kanha.ipynb
+++ b/ADVANCE-TXT-kanha.ipynb
@@ -40,7 +40,7 @@
         "\n",
         "\n",
         "# GitHub repository URL\n",
-        "GITHUB_URL = \"https://github.com/kanha453\ADVANCE-TXT-kanha.git\"  # Updated URL\n",
+        "GITHUB_URL = \"https://github.com/kanha453/ADVANCE-TXT-kanha.git\"  # Updated URL\n",
         "BRANCH_NAME = \"main\"  # Specify the branch name\n",
         "\n",
         "# Base directory for cloning\n",
